--- a/index.html
+++ b/index.html
@@ -1,233 +1,277 @@
-```html
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>재활용 쓰레기는 보물이다! - 보물을 찾아라!</title>
-  <style>
-    /* 기본 스타일 */
-    body {
-      font-family: 'Arial', sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header, footer {
-      background-color: #4CAF50;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #333;
-    }
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
-    nav li {
-      margin: 0 15px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 10px;
-    }
-    nav a:hover {
-      background-color: #575757;
-      border-radius: 4px;
-    }
-    .container {
-      max-width: 1000px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1, h2, h3 {
-      margin-top: 0;
-    }
-    hr {
-      border: none;
-      border-top: 2px solid #eee;
-      margin: 20px 0;
-    }
-    .quote {
-      background: #e0ffe0;
-      border-left: 5px solid #4CAF50;
-      margin: 20px 0;
-      padding: 10px 20px;
-      font-style: italic;
-    }
-    ul {
-      margin: 10px 0;
-      padding-left: 20px;
-    }
-    footer {
-      font-size: 0.9em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Re:Treasure - 자원의 재탄생</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <header>
-    <h1>재활용 쓰레기는 보물이다! 🌟</h1>
-    <p>"보물을 찾아라!" 홈페이지에 오신 것을 환영합니다!</p>
-  </header>
+    <!-- 헤더 -->
+    <header class="header">
+        <div class="header-container">
+            <a href="/" class="logo">Re:Treasure</a>
+            <nav class="nav-menu">
+                <a href="guide.html">분리배출 가이드</a>
+                <a href="recycle-process.html">재활용 과정</a>
+                <a href="qa.html">자주 묻는 질문</a>
+            </nav>
+        </div>
+    </header>
 
-  <nav>
-    <ul>
-      <li><a href="#home">홈</a></li>
-      <li><a href="#recycling">재활용 방법</a></li>
-      <li><a href="#game">게임 &amp; 퀴즈</a></li>
-      <li><a href="#community">커뮤니티</a></li>
-      <li><a href="#resources">자료실</a></li>
-    </ul>
-  </nav>
+    <!-- 메인 콘텐츠 -->
+    <main class="main">
+        <div class="container">
+            <div class="main-title">
+                <h1>Re:Treasure</h1>
+                <p>지구를 위한 작은 실천, 올바른 분리배출로 시작됩니다</p>
+            </div>
+        </div>
 
-  <main class="container">
-    <!-- 홈페이지 메인 -->
-    <section id="home">
-      <h2>홈페이지 메인</h2>
-      <p>
-        안녕하세요! 이 홈페이지는 <strong>재활용 쓰레기를 보물</strong>로 생각하는 관점에서 만들어졌어요.
-        재활용이 환경 보호에 얼마나 중요한지 알리고, 쓰레기 분리수거 방법을 쉽고 <strong>재미있게</strong> 배울 수 있는 공간을 목표로 했습니다.
-        "보물을 찾아라!"라는 컨셉으로, 여러분을 보물 사냥꾼으로 초대합니다! 지금부터 이 홈페이지의 멋진 기능을 소개할게요. 🚀
-      </p>
-      <hr>
-      <div class="quote">
-        "재활용 쓰레기는 보물입니다! 함께 보물을 찾아 지구를 구해요!"
-      </div>
-      <h3>주요 기능 미리보기</h3>
-      <ul>
-        <li><strong>재활용 방법</strong>: 보물 분리 기술 익히기</li>
-        <li><strong>게임 &amp; 퀴즈</strong>: 보물찾기 연습하기</li>
-        <li><strong>커뮤니티</strong>: 사냥꾼들과 소통하기</li>
-        <li><strong>자료실</strong>: 보물 정보 찾기</li>
-      </ul>
-      <p>보물지도 같은 이미지와 버튼으로 각 섹션에 쉽게 들어갈 수 있어요. 첫 화면에서부터 모험의 설렘이 시작됩니다!</p>
-    </section>
+        <!-- 통계 섹션 -->
+        <section class="stats-section">
+            <div class="container">
+                <h2 class="section-title">재활용, 우리의 현주소</h2>
+                <div class="stats-grid">
+                    <div class="stat-item">
+                        <div class="stat-number">57.3%</div>
+                        <div class="stat-label">전국 재활용률<br><small>(2023년 기준)</small></div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">404.5kg</div>
+                        <div class="stat-label">1인당 연간 생활폐기물 발생량<br><small>(2022년 기준)</small></div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">4,805톤</div>
+                        <div class="stat-label">하루 평균 재활용품 수거량<br><small>(수도권 기준)</small></div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!-- 재활용 방법 소개 -->
-    <section id="recycling">
-      <h2>재활용 방법 소개</h2>
-      <p>여기서는 재활용품을 <strong>보물</strong>로 부르며, 어떻게 분리해야 하는지 자세히 알려줍니다.</p>
-      <h3>보물 종류별 분리 방법</h3>
-      <ul>
-        <li><strong>플라스틱 보물</strong>: 페트병, 용기 등 → 라벨 떼고 깨끗이 씻어서 플라스틱 상자에!</li>
-        <li><strong>종이 보물</strong>: 신문, 상자 등 → 접어서 종이 상자에!</li>
-        <li><strong>유리 보물</strong>: 병, 유리컵 등 → 깨지지 않게 유리 상자에!</li>
-        <li><strong>기타 보물</strong>: 캔, 음식물쓰레기 등 → 각각 맞는 상자에!</li>
-      </ul>
-      <p><em>예시</em>: "페트병 보물은 라벨을 떼고 물로 헹군 뒤, 플라스틱 보물 상자에 넣으면 완성!"</p>
-      <p>
-        <strong>시각 자료</strong>: 이미지, 인포그래픽, 짧은 비디오로 분리 과정을 보여줘요.
-        예를 들어, 페트병을 분리하는 3단계 과정을 귀여운 애니메이션으로 확인할 수 있습니다!
-      </p>
-    </section>
+        <!-- 환경 보호 효과 -->
+        <section class="impact-section">
+            <div class="container">
+                <h2 class="section-title">재활용이 만드는 변화</h2>
+                <div class="impact-grid">
+                    <div class="impact-item">
+                        <div class="impact-icon">🌍</div>
+                        <h3>탄소 배출 감소</h3>
+                        <p>플라스틱 1톤 재활용 시<br>CO2 2.5톤 감축<br>연간 온실가스 배출량 5% 저감 효과</p>
+                    </div>
+                    <div class="impact-item">
+                        <div class="impact-icon">🌱</div>
+                        <h3>자원 절약</h3>
+                        <p>종이 1톤 재활용 시<br>30년생 나무 17그루 보호<br>물 7,000갤런 절약</p>
+                    </div>
+                    <div class="impact-item">
+                        <div class="impact-icon">💰</div>
+                        <h3>경제적 가치</h3>
+                        <p>연간 재활용 시장 규모<br>20조원 이상<br>신규 일자리 12만개 창출</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!-- 게임 & 퀴즈 -->
-    <section id="game">
-      <h2>게임 &amp; 퀴즈</h2>
-      <p>재미있게 놀면서 재활용을 배우는 공간이에요!</p>
-      <h3>퀴즈</h3>
-      <ul>
-        <li>
-          <strong>문제 예시</strong>: "이 보물은 어떤 상자에 넣어야 할까요? (사진: 플라스틱 용기)"
-        </li>
-        <li>
-          <strong>보상</strong>: 정답을 맞히면 <strong>보물 포인트</strong>를 주고, 주간 랭킹에 올라요!
-        </li>
-      </ul>
-      <h3>게임</h3>
-      <ul>
-        <li>
-          <strong>보물찾기 게임</strong>: 화면에 나온 재활용품을 올바른 분리함에 드래그해서 넣기!
-        </li>
-        <li>
-          <strong>모험 시뮬레이션</strong>: 가상 집에서 쓰레기를 찾아 분리하는 미션 수행!
-        </li>
-      </ul>
-      <p>
-        놀다 보면 어느새 분리수거 전문가가 되어 있을 거예요. 보물을 모으는 재미까지 덤으로!
-      </p>
-    </section>
+        <!-- 실천 방법 -->
+        <section class="action-section">
+            <div class="container">
+                <h2 class="section-title">올바른 분리배출 실천하기</h2>
+                <div class="action-list">
+                    <div class="action-item">
+                        <div class="action-number">1</div>
+                        <div class="action-content">
+                            <h3>비우고 헹구고 분리하기</h3>
+                            <p>내용물은 완전히 비우고, 이물질은 깨끗이 헹궈주세요. 플라스틱과 비닐, 라벨은 분리해주세요. 깨끗한 재활용품은 95% 이상 재활용되어 새로운 자원으로 탄생합니다.</p>
+                        </div>
+                    </div>
+                    <div class="action-item">
+                        <div class="action-number">2</div>
+                        <div class="action-content">
+                            <h3>재질별 올바른 분리</h3>
+                            <p>종이류, 플라스틱, 유리, 캔류는 반드시 분리해주세요. 특히 종이류는 물에 젖지 않게, 플라스틱은 투명과 유색을 구분해주세요. 작은 실천이 재활용 효율을 크게 높입니다.</p>
+                        </div>
+                    </div>
+                    <div class="action-item">
+                        <div class="action-number">3</div>
+                        <div class="action-content">
+                            <h3>재사용 습관 기르기</h3>
+                            <p>일회용품 대신 다회용기 사용하기, 장바구니 들고 다니기, 리필 제품 이용하기 등 생활 속 작은 습관이 큰 변화를 만듭니다. 연간 1인당 일회용품 사용량 평균 200개를 줄일 수 있습니다.</p>
+                        </div>
+                    </div>
+                    <div class="action-item">
+                        <div class="action-number">4</div>
+                        <div class="action-content">
+                            <h3>재활용 정보 확인하기</h3>
+                            <p>포장재에 표시된 분리배출 마크를 확인하고, 재질에 맞는 방법으로 분리배출해주세요. 재활용이 어려운 제품은 일반쓰레기로 배출하여 재활용 효율을 높여주세요.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <!-- 커뮤니티 -->
-    <section id="community">
-      <h2>커뮤니티</h2>
-      <p>보물 사냥꾼들이 모여서 서로의 이야기를 나누는 공간입니다.</p>
-      <h3>경험 공유 게시판</h3>
-      <ul>
-        <li>"오늘 이런 보물을 찾았어요!" (사진 첨부)</li>
-        <li>"이 보물은 어떻게 분리하나요?"</li>
-      </ul>
-      <h3>Q&amp;A 코너</h3>
-      <p>"이건 어떤 보물일까요?" → 다른 사냥꾼이나 전문가가 답변!</p>
-      <h3>이벤트</h3>
-      <p>
-        <strong>보물 사냥 챌린지</strong>: "한 달 동안 분리수거 인증하고 상품 받기!"<br>
-        친구들과 함께하면 재활용이 더 즐거워져요!
-      </p>
-    </section>
+        <!-- 재활용 팁 섹션 -->
+        <section class="tips-section">
+            <div class="tips-container">
+                <h2 class="section-title">알면 실천하기 쉬운 재활용 팁</h2>
+                <div class="tips-categories">
+                    <!-- 플라스틱 재활용 팁 -->
+                    <div class="tips-category">
+                        <div class="category-header">
+                            <h3>플라스틱 재활용 가이드</h3>
+                        </div>
+                        <div class="category-content">
+                            <ul class="tip-list">
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">🔍</span>
+                                        <span>재질 표시 확인하기</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        플라스틱 용기 바닥의 재질 표시 번호를 확인하세요:
+                                        <br>① PET - 음료수병, 생수병
+                                        <br>② HDPE - 샴푸통, 세제통
+                                        <br>③ PVC - 랩, 비닐
+                                        <br>④ LDPE - 일회용 비닐
+                                        <br>⑤ PP - 도시락 용기
+                                        <br>⑥ PS - 요구르트병
+                                    </p>
+                                    <div class="tip-note">1-6번은 재활용 가능, 7번(기타)은 일반쓰레기로 배출</div>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">💧</span>
+                                        <span>세척과 분리 방법</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        내용물을 비우고 물로 헹군 후, 라벨과 뚜껑을 분리하세요. 투명 페트병은 라벨을 제거하고 최대한 압축하여 별도 배출해야 합니다.
+                                    </p>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">⚠️</span>
+                                        <span>주의해야 할 품목</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        다음 품목은 일반쓰레기로 배출하세요:
+                                        <br>- 알약 포장재
+                                        <br>- 카세트테이프
+                                        <br>- CD/DVD
+                                        <br>- 장난감
+                                        <br>- 칫솔
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
-    <!-- 자료실 -->
-    <section id="resources">
-      <h2>자료실</h2>
-      <p>보물찾기에 필요한 정보를 모아놓은 창고예요.</p>
-      <ul>
-        <li><strong>재활용 법규</strong>: 최신 분리수거 규정 확인</li>
-        <li><strong>보물 목록</strong>: "이건 재활용 보물인가요?" 검색 기능 포함</li>
-        <li><strong>교육 자료</strong>: 다운로드 가능한 가이드북, 포스터</li>
-      </ul>
-      <p>궁금한 게 있으면 언제든 자료실에서 답을 찾아보세요!</p>
-    </section>
+                    <!-- 종이류 재활용 팁 -->
+                    <div class="tips-category">
+                        <div class="category-header">
+                            <h3>종이류 재활용 노하우</h3>
+                        </div>
+                        <div class="category-content">
+                            <ul class="tip-list">
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">📦</span>
+                                        <span>종이류 분리 배출</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        종이류는 반드시 물기에 젖지 않게 묶어서 배출하세요:
+                                        <br>- 신문지: 끈으로 묶어서 배출
+                                        <br>- 책자/노트: 스프링 제거
+                                        <br>- 상자류: 테이프 제거 후 접어서 배출
+                                    </p>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">🥛</span>
+                                        <span>종이팩 분리배출</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        우유팩, 주스팩은 내용물을 비우고 물로 헹군 뒤 말려서 펼친 후 배출하세요. 종이팩 1kg당 화장지 2롤로 교환할 수 있는 보상제도를 활용해보세요.
+                                    </p>
+                                    <div class="tip-note">종이팩 분리배출함이 없는 경우, 일반 종이류와 섞이지 않게 별도 봉투에 담아 배출</div>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">❌</span>
+                                        <span>재활용 불가 종이류</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        다음 품목은 일반쓰레기로 배출하세요:
+                                        <br>- 영수증(감열지)
+                                        <br>- 코팅된 종이
+                                        <br>- 비닐 코팅된 포장지
+                                        <br>- 방수 처리된 종이
+                                        <br>- 오염된 피자 박스
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
-    <!-- 디자인 및 사용 편의성 -->
-    <section id="design">
-      <h2>디자인과 사용 편의성</h2>
-      <ul>
-        <li>
-          <strong>디자인</strong>: 초록색과 파란색을 활용해 재활용을 상징하고, 보물지도 및 보물 상자 이미지를 사용하여 귀여운 레이아웃을 구성합니다.
-        </li>
-        <li>
-          <strong>내비게이션</strong>: 상단 메뉴(홈, 재활용 방법, 게임 &amp; 퀴즈, 커뮤니티, 자료실)와 검색창을 통해 원하는 보물 정보를 빠르게 찾을 수 있습니다.
-        </li>
-      </ul>
-    </section>
+                    <!-- 유리/캔류 재활용 팁 -->
+                    <div class="tips-category">
+                        <div class="category-header">
+                            <h3>유리/캔류 재활용 방법</h3>
+                        </div>
+                        <div class="category-content">
+                            <ul class="tip-list">
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">🍶</span>
+                                        <span>유리병 배출 요령</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        내용물을 비우고 물로 헹군 후, 라벨과 뚜껑을 제거하여 배출하세요. 깨진 유리는 신문지에 싸서 일반쓰레기로 배출합니다.
+                                    </p>
+                                    <div class="tip-note">소주병, 맥주병은 소매점이나 마트의 빈용기 보증금 제도를 이용하세요</div>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">🥫</span>
+                                        <span>캔류 분리배출</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        내용물을 비우고 물로 헹군 후 배출하세요. 부탄가스 용기는 구멍을 뚫어 내용물을 비운 후 배출합니다. 알루미늄 캔과 철캔은 함께 배출해도 됩니다.
+                                    </p>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon">⚠️</span>
+                                        <span>재활용 불가 품목</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        다음 유리제품은 일반쓰레기로 배출하세요:
+                                        <br>- 거울, 전구
+                                        <br>- 도자기류
+                                        <br>- 내열유리(전자레인지용기)
+                                        <br>- 유리 식기류
+                                        <br>- 창문유리
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <!-- 재미 요소 -->
-    <section id="fun">
-      <h2>재미를 더하는 요소</h2>
-      <ul>
-        <li><strong>보물 포인트 시스템</strong>: 퀴즈와 게임으로 포인트를 모아 랭킹에 도전!</li>
-        <li><strong>커뮤니티 활성화</strong>: 좋아요, 댓글로 소통하고 베스트 사냥꾼을 선정합니다.</li>
-        <li><strong>보상</strong>: 상위 랭커나 챌린지 참여자에게 재활용 소재로 만든 작은 선물을 증정합니다.</li>
-      </ul>
-    </section>
-
-    <!-- 마무리 -->
-    <section id="conclusion">
-      <h2>마무리</h2>
-      <p>
-        이 홈페이지를 통해 재활용 쓰레기가 보물임을 깨닫고, 분리수거를 즐기며 환경 보호에 동참해보세요.
-        지금 바로 "보물을 찾아라!" 모험에 참여해서 지구를 구하는 멋진 사냥꾼이 되어 보세요! 🌍💎
-      </p>
-      <p>
-        재활용이 더 이상 어렵고 지루한 일이 아니라, 재미있는 보물찾기 놀이가 되기를 바랍니다!
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 보물을 찾아라! All rights reserved.</p>
-  </footer>
+    <!-- 푸터 -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-info">
+                <p>&copy; 2024 Re:Treasure. All rights reserved.</p>
+            </div>
+            <div class="footer-links">
+                <a href="about.html">소개</a>
+                <a href="privacy.html">개인정보처리방침</a>
+                <a href="terms.html">이용약관</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
-```
