--- a/guide.html
+++ b/guide.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>분리배출 가이드 - Re:Treasure</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -12,13 +14,17 @@
         }
 
         body {
-            font-family: 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
             line-height: 1.6;
             color: #333;
             background-color: #f5f5f5;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            word-break: keep-all;
+            overflow-wrap: break-word;
         }
 
         /* 헤더 스타일 */
@@ -298,77 +304,203 @@
                 <span></span>
             </button>
             <nav class="nav-menu">
-                <a href="guide.html">분리배출 가이드</a>
-                <a href="recycle-process.html">재활용 과정</a>
-                <a href="qa.html">자주 묻는 질문</a>
+                <a href="guide.html" class="active">분리배출 가이드</a>
+                <a href="success-stories/index.html">세계 성공사례</a>
             </nav>
         </div>
     </header>
 
-    <!-- 메인 콘텐츠 -->
     <main class="main">
-        <div class="container">
-            <div class="main-title">
-                <h1>분리배출 가이드</h1>
-                <p>올바른 분리배출로 재활용률을 높여요</p>
-            </div>
-
-            <div class="guide-grid">
-                <!-- 종이류 -->
-                <div class="guide-item">
-                    <h2>종이류</h2>
-                    <ul>
-                        <li>신문지, 책, 노트</li>
-                        <li>종이박스, 골판지</li>
-                        <li>종이컵 (내부 깨끗이 헹굼)</li>
-                        <li>우유팩, 음료팩 (내부 깨끗이 헹굼)</li>
-                    </ul>
-                    <div class="tip">
-                        <strong>TIP!</strong> 테이프, 스테이플러 등 이물질은 제거해주세요.
-                    </div>
-                </div>
-
-                <!-- 플라스틱류 -->
-                <div class="guide-item">
-                    <h2>플라스틱류</h2>
-                    <ul>
-                        <li>페트병 (라벨 제거)</li>
-                        <li>플라스틱 용기</li>
-                        <li>비닐봉투</li>
-                        <li>스티로폼 (이물질 제거)</li>
-                    </ul>
-                    <div class="tip">
-                        <strong>TIP!</strong> 내용물을 비우고 물로 헹궈 이물질을 제거해주세요.
-                    </div>
-                </div>
-
-                <!-- 유리류 -->
-                <div class="guide-item">
-                    <h2>유리류</h2>
-                    <ul>
-                        <li>음료수병</li>
-                        <li>기타 유리병</li>
-                        <li>깨진 유리 (신문지에 싸서 배출)</li>
-                    </ul>
-                    <div class="tip">
-                        <strong>TIP!</strong> 깨진 유리는 다치지 않도록 주의해서 배출해주세요.
-                    </div>
-                </div>
-
-                <!-- 캔/고철류 -->
-                <div class="guide-item">
-                    <h2>캔/고철류</h2>
-                    <ul>
-                        <li>음료수캔, 통조림캔</li>
-                        <li>부탄가스 용기 (구멍 뚫어서 배출)</li>
-                        <li>고철류</li>
-                    </ul>
-                    <div class="tip">
-                        <strong>TIP!</strong> 내용물을 비우고 물로 헹궈 이물질을 제거해주세요.
-                    </div>
-                </div>
-            </div>
+        <div class="page-header">
+            <h1>분리배출 가이드</h1>
+            <p class="subtitle">올바른 분리배출로 시작하는 자원순환의 첫걸음</p>
         </div>
+
+        <!-- 실천 방법 -->
+        <section class="action-section">
+            <div class="container">
+                <h2 class="section-title">올바른 분리배출 실천하기</h2>
+                <div class="action-list">
+                    <div class="action-item">
+                        <div class="action-number">1</div>
+                        <div class="action-content">
+                            <h3>비우고 헹구고 분리하기</h3>
+                            <p>내용물은 완전히 비우고, 이물질은 깨끗이 헹궈주세요. 플라스틱과 비닐, 라벨은 분리해주세요. 깨끗한 재활용품은 95% 이상 재활용되어 새로운 자원으로 탄생합니다.</p>
+                        </div>
+                    </div>
+                    <div class="action-item">
+                        <div class="action-number">2</div>
+                        <div class="action-content">
+                            <h3>재질별 올바른 분리</h3>
+                            <p>종이류, 플라스틱, 유리, 캔류는 반드시 분리해주세요. 특히 종이류는 물에 젖지 않게, 플라스틱은 투명과 유색을 구분해주세요. 작은 실천이 재활용 효율을 크게 높입니다.</p>
+                        </div>
+                    </div>
+                    <div class="action-item">
+                        <div class="action-number">3</div>
+                        <div class="action-content">
+                            <h3>재사용 습관 기르기</h3>
+                            <p>일회용품 대신 다회용기 사용하기, 장바구니 들고 다니기, 리필 제품 이용하기 등 생활 속 작은 습관이 큰 변화를 만듭니다. 연간 1인당 일회용품 사용량 평균 200개를 줄일 수 있습니다.</p>
+                        </div>
+                    </div>
+                    <div class="action-item">
+                        <div class="action-number">4</div>
+                        <div class="action-content">
+                            <h3>재활용 정보 확인하기</h3>
+                            <p>포장재에 표시된 분리배출 마크를 확인하고, 재질에 맞는 방법으로 분리배출해주세요. 재활용이 어려운 제품은 일반쓰레기로 배출하여 재활용 효율을 높여주세요.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 재활용 팁 섹션 -->
+        <section class="tips-section">
+            <div class="tips-container">
+                <h2 class="section-title">알면 실천하기 쉬운 재활용 팁</h2>
+                <div class="tips-categories">
+                    <!-- 플라스틱 재활용 팁 -->
+                    <div class="tips-category">
+                        <div class="category-header">
+                            <h3>플라스틱 재활용 가이드</h3>
+                        </div>
+                        <div class="category-content">
+                            <ul class="tip-list">
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-search"></i></span>
+                                        <span>재질 표시 확인하기</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        플라스틱 용기 바닥의 재질 표시 번호를 확인하세요:
+                                        <br>① PET - 음료수병, 생수병
+                                        <br>② HDPE - 샴푸통, 세제통
+                                        <br>③ PVC - 랩, 비닐
+                                        <br>④ LDPE - 일회용 비닐
+                                        <br>⑤ PP - 도시락 용기
+                                        <br>⑥ PS - 요구르트병
+                                    </p>
+                                    <div class="tip-note">1-6번은 재활용 가능, 7번(기타)은 일반쓰레기로 배출</div>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-tint"></i></span>
+                                        <span>세척과 분리 방법</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        내용물을 비우고 물로 헹군 후, 라벨과 뚜껑을 분리하세요. 투명 페트병은 라벨을 제거하고 최대한 압축하여 별도 배출해야 합니다.
+                                    </p>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-exclamation-triangle"></i></span>
+                                        <span>주의해야 할 품목</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        다음 품목은 일반쓰레기로 배출하세요:
+                                        <br>- 알약 포장재
+                                        <br>- 카세트테이프
+                                        <br>- CD/DVD
+                                        <br>- 장난감
+                                        <br>- 칫솔
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- 종이류 재활용 팁 -->
+                    <div class="tips-category">
+                        <div class="category-header">
+                            <h3>종이류 재활용 노하우</h3>
+                        </div>
+                        <div class="category-content">
+                            <ul class="tip-list">
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-box"></i></span>
+                                        <span>종이류 분리 배출</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        종이류는 반드시 물기에 젖지 않게 묶어서 배출하세요:
+                                        <br>- 신문지: 끈으로 묶어서 배출
+                                        <br>- 책자/노트: 스프링 제거
+                                        <br>- 상자류: 테이프 제거 후 접어서 배출
+                                    </p>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-wine-bottle"></i></span>
+                                        <span>종이팩 분리배출</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        우유팩, 주스팩은 내용물을 비우고 물로 헹군 뒤 말려서 펼친 후 배출하세요. 종이팩 1kg당 화장지 2롤로 교환할 수 있는 보상제도를 활용해보세요.
+                                    </p>
+                                    <div class="tip-note">종이팩 분리배출함이 없는 경우, 일반 종이류와 섞이지 않게 별도 봉투에 담아 배출</div>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-times-circle"></i></span>
+                                        <span>재활용 불가 종이류</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        다음 품목은 일반쓰레기로 배출하세요:
+                                        <br>- 영수증(감열지)
+                                        <br>- 코팅된 종이
+                                        <br>- 비닐 코팅된 포장지
+                                        <br>- 방수 처리된 종이
+                                        <br>- 오염된 피자 박스
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- 유리/캔류 재활용 팁 -->
+                    <div class="tips-category">
+                        <div class="category-header">
+                            <h3>유리/캔류 재활용 방법</h3>
+                        </div>
+                        <div class="category-content">
+                            <ul class="tip-list">
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-glass-martini"></i></span>
+                                        <span>유리병 배출 요령</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        내용물을 비우고 물로 헹군 후, 라벨과 뚜껑을 제거하여 배출하세요. 깨진 유리는 신문지에 싸서 일반쓰레기로 배출합니다.
+                                    </p>
+                                    <div class="tip-note">소주병, 맥주병은 소매점이나 마트의 빈용기 보증금 제도를 이용하세요</div>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-recycle"></i></span>
+                                        <span>캔류 분리배출</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        내용물을 비우고 물로 헹군 후 배출하세요. 부탄가스 용기는 구멍을 뚫어 내용물을 비운 후 배출합니다. 알루미늄 캔과 철캔은 함께 배출해도 됩니다.
+                                    </p>
+                                </li>
+                                <li class="tip-item">
+                                    <div class="tip-title">
+                                        <span class="tip-icon"><i class="fas fa-ban"></i></span>
+                                        <span>재활용 불가 품목</span>
+                                    </div>
+                                    <p class="tip-description">
+                                        다음 유리제품은 일반쓰레기로 배출하세요:
+                                        <br>- 거울, 전구
+                                        <br>- 도자기류
+                                        <br>- 내열유리(전자레인지용기)
+                                        <br>- 유리 식기류
+                                        <br>- 창문유리
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- 푸터 -->
