--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re:Treasure - 자원의 재탄생</title>
-    <!-- head 컴포넌트 삽입 -->
-    <?php include 'components/head.html'; ?>
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <!-- 메뉴 컴포넌트 삽입 -->
-    <?php include 'components/menu.html'; ?>
+    <!-- 헤더 -->
+    <header class="header">
+        <div class="header-container">
+            <a href="index.html" class="logo">Re:Treasure</a>
+            <button class="menu-toggle" aria-label="메뉴 열기">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="nav-menu">
+                <a href="guide.html">분리배출 가이드</a>
+                <a href="success-stories/index.html">세계 성공사례</a>
+            </nav>
+        </div>
+    </header>
 
     <!-- 메인 콘텐츠 -->
     <main class="main">
