1차 디자인 끝

--- a/guide.html
+++ b/guide.html
@@ -306,6 +306,7 @@
             <nav class="nav-menu">
                 <a href="guide.html" class="active">분리배출 가이드</a>
                 <a href="success-stories/index.html">세계 성공사례</a>
+                <a href="appropriate-tech.html">적정기술</a>
             </nav>
         </div>
     </header>
