--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <nav class="nav-menu">
                 <a href="guide.html">분리배출 가이드</a>
                 <a href="success-stories/index.html">세계 성공사례</a>
+                <a href="appropriate-tech.html">적정기술</a>
             </nav>
         </div>
     </header>
