--- a/success-stories/index.html
+++ b/success-stories/index.html
@@ -15,6 +15,7 @@
             <nav class="nav-menu">
                 <a href="../guide.html">분리배출 가이드</a>
                 <a href="index.html" class="active">세계 성공사례</a>
+                <a href="../appropriate-tech.html">적정기술</a>
             </nav>
         </div>
     </header>
